Adding integration tests based on swagger definition
