# src/server.ts
@@ -1,10 +1,12 @@
 import express from 'express'
 import cors from 'cors'
-import router from './router'
 import todoRoutes from './api/todos/todo.routes'
+import userRoutes from './api/users/user.routes'
 import errorMiddleware from './middleware/error.middleware'
 import notFoundMiddleware from './middleware/notFound.middleware'
 import requestLogger from './utils/requestLogger'
+import swaggerUi from 'swagger-ui-express'
+import swaggerDocument from '../swagger.json'
 
 
 const app = express()
@@ -14,9 +16,19 @@ app.use(cors())
 app.use(express.json())
 app.use(express.urlencoded({ extended: true }))
 
-
+app.use('/api/users', userRoutes)
 app.use('/api/todos', todoRoutes)
-// app.use('/api', router)
+
+/**
+ * Swagger
+ */
+
+const options = {
+  explorer: true,
+}
+
+app.use('/api/docs', swaggerUi.serve)
+app.get('/api/docs', swaggerUi.setup(swaggerDocument, options))
 
 app.use(notFoundMiddleware);
 app.use(errorMiddleware)
